Version 14    2011-February-22

--Fixed crash caused by language files that use extended ASCII characters 
  (thanks Malte Perenz).

--Changed to % instead of @ to quit from pause screen, because @ is 
  inaccessible on some non-US keyboards.

--Fixed so that % key to toggle playback display works even if speed control 
  keys are disabled.

--Fixed so that enter key is enabled on game quit/restart that happens in the 
  middle of the tutorial after enter has been explained (thanks Ian Bogost).

--Fixed so that game always fills screen vertically as much as it can, 
  preserving whole-multiple game pixels, regardless of aspect ratio.  Before, 
  it wasn't working properly in 16:9.

--Moved token level numbers up one pixel to make them easier to read, and 
  redesigned some of the token icons to make this shift possible (thanks 
  Daniel Benmergui).

--Added tool-tips marking the sub-level difficulty inside a token (thanks 
  Jonathan Blow).

--Token tool tips are now always shown instantly on mouse over (not just 3 
  times each).

--New, less severe formula for computing difficulty of levels inside tokens.

--Playback automatically reverts to windowed mode if the specified resolution 
  is not available.

--Alt-Tab now minimizes out of windowed mode as well as fullscreen mode.

--Made connection between token icons and sub-level layouts more extreme 
  (thanks Ian Bogost).





Version 13   2011-February-18     (First public release)

--Fixed a bunch of code warnings and a few bugs using cppcheck.

--Speed control keys are now off by default (can be turned on in settings).

--Fixed inside-enemy power-ups at level 0 so they are not capped at 1.




Version 12   2011-February-17

--Enemy base bullet speed now gradually increases, between levels 20 and 80, 
  up to being equal to player's bullet speed (before, enemy bullet speed was 
  always half player bullet speed).

--Fixed to eliminate easy 1-descent token doubling by reducing base level of 